--- a/dashboard.html
+++ b/dashboard.html
@@ -48,7 +48,34 @@
       border: 1px solid rgba(255,255,255,0.05);
     }
 
+    .chart-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 6px;
+    }
+
+    .chart-header h2 {
+      font-size: 1rem;
+      margin-bottom: 4px;
+    }
+
+    .chart-header p {
+      color: var(--muted);
+      font-size: .85rem;
+    }
+
     #gravity_chart { width: 100%; height: 370px; margin-top: 10px; }
+
+    #rangeSelect {
+      background: #111720;
+      color: var(--text);
+      border-radius: 999px;
+      border: 1px solid rgba(255,255,255,0.12);
+      padding: 6px 10px;
+      font-size: 0.8rem;
+      outline: none;
+    }
 
     .sensor-block {
       margin-bottom: 28px;
@@ -74,7 +101,7 @@
     .value { font-size: 1.8rem; font-weight: 600; }
     .value small { font-size: .8rem; color: var(--muted); }
 
-    .chip-row { display: flex; gap: 8px; margin-top: 10px; }
+    .chip-row { display: flex; gap: 8px; margin-top: 10px; flex-wrap: wrap; }
     .chip {
       background: rgba(255,255,255,0.05);
       padding: 4px 8px;
@@ -103,8 +130,20 @@
 
       <!-- CHART -->
       <div class="card">
-        <h2 style="font-size:1rem; margin-bottom:4px;">Gravity Trend (Black & Green)</h2>
-        <p style="color:var(--muted); font-size:.85rem;">Last 200 readings</p>
+        <div class="chart-header">
+          <div>
+            <h2>Gravity Trend (Black & Green)</h2>
+            <p>Range: <span id="rangeLabel">Today</span></p>
+          </div>
+          <div>
+            <select id="rangeSelect">
+              <option value="1">Today</option>
+              <option value="3">Last 3 days</option>
+              <option value="5">Last 5 days</option>
+              <option value="7">Last 7 days</option>
+            </select>
+          </div>
+        </div>
         <div id="gravity_chart"></div>
       </div>
 
@@ -171,38 +210,52 @@ google.charts.setOnLoadCallback(initDashboard);
 
 const SHEET_ID = "1cV8POWA9l0hlAyZPB1RYLYaqa4T4pXIRzQ3e6C9qkE8";
 const DATASETS = [
-  { sheet: "Black Corn", color: "#d8843e", key: "black" },
-  { sheet: "Green Corn", color: "#00c9a7", key: "green" }
+  { sheet: "Black Corn", key: "black" },
+  { sheet: "Green Corn", key: "green" }
 ];
 
 function initDashboard() {
+  const rangeSelect = document.getElementById("rangeSelect");
+  rangeSelect.addEventListener("change", () => {
+    updateRangeLabel();
+    updateDashboard();
+  });
+  updateRangeLabel();
   updateDashboard();
   setInterval(updateDashboard, 20000);
 }
 
-function updateDashboard() {
+function getRangeDays() {
+  return parseInt(document.getElementById("rangeSelect").value || "1", 10);
+}
 
+function updateRangeLabel() {
+  const label = document.getElementById("rangeLabel");
+  const days = getRangeDays();
+  if (days === 1) label.textContent = "Today";
+  else label.textContent = `Last ${days} days`;
+}
+
+function updateDashboard() {
   Promise.all(DATASETS.map(ds => loadSheet(ds.sheet)))
     .then(results => {
-
       let dataBySheet = {};
       DATASETS.forEach((ds, i) => dataBySheet[ds.sheet] = results[i]);
 
       updateTiles(dataBySheet);
       drawChart(dataBySheet);
-
     })
     .catch(err => console.error("Load error:", err));
 }
 
+// ----------------- SHEET LOADING -----------------
 function loadSheet(sheet) {
   return new Promise((resolve, reject) => {
-
-    const queryString =
-      `select A,B,C where A is not null order by A`;
-
+    const queryString = `select A,B,C where A is not null order by A`;
     const url =
-      `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json&sheet=${encodeURIComponent(sheet)}&tq=${encodeURIComponent(queryString)}`;
+      `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq` +
+      `?tqx=out:json&sheet=${encodeURIComponent(sheet)}` +
+      `&tq=${encodeURIComponent(queryString)}`;
 
     fetch(url)
       .then(r => r.text())
@@ -214,14 +267,83 @@ function loadSheet(sheet) {
   });
 }
 
-function updateTiles(dataBySheet) {
+// ----------------- TIMESTAMP HELPERS -----------------
+function toDate(raw) {
+  if (raw && typeof raw === "object") {
+    if ("v" in raw) raw = raw.v;
+    else if ("f" in raw) raw = raw.f;
+  }
 
+  if (raw instanceof Date) return raw;
+
+  if (typeof raw === "string") {
+    if (raw.includes("Date(")) {
+      const clean = raw.replace("Date(", "").replace(")", "");
+      const parts = clean.split(",").map(Number);
+      return new Date(parts[0], parts[1], parts[2], parts[3], parts[4], parts[5]);
+    }
+    // Already formatted string: we can't turn back into Date reliably
+    // so just return "now" for ordering, value still shows formatted.
+    const d = new Date(raw);
+    if (!isNaN(d.getTime())) return d;
+    return new Date();
+  }
+
+  if (typeof raw === "number") {
+    // Google serial date: days since 1899-12-30
+    const base = new Date(Date.UTC(1899, 11, 30));
+    return new Date(base.getTime() + raw * 86400000);
+  }
+
+  return new Date();
+}
+
+function parseTimestamp(raw) {
+  if (raw && typeof raw === "object") {
+    if ("f" in raw && raw.f) return raw.f;
+    if ("v" in raw) raw = raw.v;
+  }
+
+  if (typeof raw === "string" && !raw.includes("Date(")) {
+    return raw;
+  }
+
+  if (typeof raw === "string" && raw.includes("Date(")) {
+    const d = toDate(raw);
+    return d.toLocaleString("en-US", {
+      month: "short",
+      day: "2-digit",
+      year: "numeric",
+      hour: "2-digit",
+      minute: "2-digit",
+      hour12: true,
+      timeZone: "America/Chicago"
+    });
+  }
+
+  if (typeof raw === "number") {
+    const d = toDate(raw);
+    return d.toLocaleString("en-US", {
+      month: "short",
+      day: "2-digit",
+      year: "numeric",
+      hour: "2-digit",
+      minute: "2-digit",
+      hour12: true,
+      timeZone: "America/Chicago"
+    });
+  }
+
+  return String(raw ?? "");
+}
+
+// ----------------- TILES (ONLINE/OFFLINE + LAST VALUE) -----------------
+function updateTiles(dataBySheet) {
   updateTile(dataBySheet["Black Corn"], "black");
   updateTile(dataBySheet["Green Corn"], "green");
 }
 
 function updateTile(table, key) {
-
   const statusEl = document.getElementById(`${key}Status`);
   const tempEl = document.getElementById(`${key}Temp`);
   const gravEl = document.getElementById(`${key}Gravity`);
@@ -231,72 +353,115 @@ function updateTile(table, key) {
     statusEl.textContent = "Offline";
     statusEl.classList.remove("online");
     statusEl.classList.add("offline");
+    tempEl.innerHTML = `--<small>°F</small>`;
+    gravEl.innerHTML = `--<small>SG</small>`;
+    updEl.textContent = "Last update: --";
     return;
   }
 
-  const last = table.rows[table.rows.length - 1].c;
-
-  const ts = last[0].v;
-  const temp = last[1].v;
-  const grav = last[2].v;
-
-  tempEl.innerHTML = `${temp.toFixed(1)}<small>°F</small>`;
-  gravEl.innerHTML = `${grav.toFixed(3)}<small>SG</small>`;
-
-  // ✔ FIX: Format Google Sheets Date(YYYY,MM,DD,HH,MM,SS)
-  try {
-    const clean = ts.replace("Date(", "").replace(")", "");
-    const parts = clean.split(",");
-    const d = new Date(parts[0], parts[1], parts[2], parts[3], parts[4], parts[5]);
-
-    const formatted = d.toLocaleString("en-US", {
-      weekday: "short",
-      month: "short",
-      day: "2-digit",
-      year: "numeric",
-      hour: "2-digit",
-      minute: "2-digit",
-      hour12: true,
-      timeZone: "America/Chicago"
-    });
-
-    updEl.textContent = "Last update: " + formatted;
-
-  } catch (e) {
-    updEl.textContent = "Last update: " + ts;
+  // Walk backwards to find the last row with valid A,B,C
+  let lastRow = null;
+  for (let i = table.rows.length - 1; i >= 0; i--) {
+    const c = table.rows[i].c;
+    if (c && c[0] && c[1] && c[2] &&
+        c[0].v != null && c[1].v != null && c[2].v != null) {
+      lastRow = c;
+      break;
+    }
   }
+
+  if (!lastRow) {
+    statusEl.textContent = "Offline";
+    statusEl.classList.remove("online");
+    statusEl.classList.add("offline");
+    return;
+  }
+
+  const tsRaw = lastRow[0].v;
+  const tempRaw = Number(lastRow[1].v);
+  const gravRaw = Number(lastRow[2].v);
+
+  tempEl.innerHTML = `${tempRaw.toFixed(1)}<small>°F</small>`;
+  gravEl.innerHTML = `${gravRaw.toFixed(3)}<small>SG</small>`;
+  updEl.textContent = "Last update: " + parseTimestamp(tsRaw);
 
   statusEl.textContent = "Online";
   statusEl.classList.add("online");
   statusEl.classList.remove("offline");
 }
 
-function drawChart(dataBySheet) {
+// ----------------- CHART (MERGED SERIES + RANGE FILTER) -----------------
+function extractSeries(table) {
+  if (!table || !table.rows) return [];
+  const series = [];
 
-  let data = new google.visualization.DataTable();
+  for (const row of table.rows) {
+    const c = row.c;
+    if (!c || !c[0] || !c[2] || c[0].v == null || c[2].v == null) continue;
+
+    const d = toDate(c[0].v);
+    const g = Number(c[2].v);
+    if (isNaN(g)) continue;
+
+    series.push({ time: d, gravity: g });
+  }
+
+  return series;
+}
+
+function drawChart(dataBySheet) {
+  const blackTable = dataBySheet["Black Corn"];
+  const greenTable = dataBySheet["Green Corn"];
+
+  const blackSeries = extractSeries(blackTable);
+  const greenSeries = extractSeries(greenTable);
+
+  const rangeDays = getRangeDays();
+  const now = new Date();
+  const cutoffMs = now.getTime() - rangeDays * 86400000;
+
+  // Merge points by timestamp
+  const map = new Map();
+
+  function addPoints(series, keyName) {
+    series.forEach(p => {
+      if (p.time.getTime() < cutoffMs) return;
+      const key = p.time.toISOString();
+      let obj = map.get(key);
+      if (!obj) {
+        obj = { time: p.time, black: null, green: null };
+        map.set(key, obj);
+      }
+      obj[keyName] = p.gravity;
+    });
+  }
+
+  addPoints(blackSeries, "black");
+  addPoints(greenSeries, "green");
+
+  const merged = Array.from(map.values());
+  merged.sort((a, b) => a.time - b.time);
+
+  // Limit to last 200 combined points
+  if (merged.length > 200) {
+    merged.splice(0, merged.length - 200);
+  }
+
+  const data = new google.visualization.DataTable();
   data.addColumn("string", "Time");
   data.addColumn("number", "Black Corn");
   data.addColumn("number", "Green Corn");
 
-  const black = dataBySheet["Black Corn"];
-  if (!black || !black.rows) return;
-
-  const rows = black.rows.length;
-  const start = Math.max(0, rows - 200);
-
-  for (let i = start; i < rows; i++) {
-
-    const ts = black.rows[i].c[0].v;
-
-    const blackVal = black.rows[i].c[2].v;
-    let greenVal = null;
-
-    const green = dataBySheet["Green Corn"];
-    if (green && green.rows && green.rows[i])
-      greenVal = green.rows[i].c[2].v;
-
-    data.addRow([String(ts), blackVal, greenVal]);
-  }
+  merged.forEach(p => {
+    const label = p.time.toLocaleString("en-US", {
+      month: "short",
+      day: "2-digit",
+      hour: "2-digit",
+      minute: "2-digit",
+      hour12: true
+    });
+    data.addRow([label, p.black, p.green]);
+  });
 
   const options = {
     backgroundColor: "transparent",
