ABV Added dashboard.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -160,13 +160,18 @@
           <div class="value-area">
             <div class="value-block">
               <div class="value-label">Gravity</div>
-              <div id="blackGravity" class="value">--<small>SG</small></div>
+                <div id="blackGravity" class="value">--<small>SG</small></div>
             </div>
             <div class="value-block">
               <div class="value-label">Temperature</div>
               <div id="blackTemp" class="value">--<small>°F</small></div>
             </div>
+          <div class="value-block">
+            <div class="value-label">ABV</div>
+              <div id="blackABV" class="value">--<small>%</small></div>
           </div>
+          </div>
+
 
           <div class="chip-row">
             <div class="chip">Batch: <strong class="copper">Black Corn</strong></div>
@@ -185,12 +190,17 @@
             <div class="value-block">
               <div class="value-label">Gravity</div>
               <div id="greenGravity" class="value">--<small>SG</small></div>
-            </div>
+          </div>
             <div class="value-block">
               <div class="value-label">Temperature</div>
-              <div id="greenTemp" class="value">--<small>°F</small></div>
-            </div>
+                <div id="greenTemp" class="value">--<small>°F</small></div>
           </div>
+            <div class="value-block">
+            <div class="value-label">ABV</div>
+            <div id="greenABV" class="value">--<small>%</small></div>
+            </div>
+        </div>
+
 
           <div class="chip-row">
             <div class="chip">Batch: <strong class="teal">Green Corn</strong></div>
