--- a/dashboard.html
+++ b/dashboard.html
@@ -11,6 +11,9 @@
   <script src="https://www.gstatic.com/charts/loader.js"></script>
 
   <style>
+    /* ==============================
+       GLOBAL COLORS & BASE STYLES
+       ============================== */
     :root {
       --bg: #0f1318;
       --panel: #171d24;
@@ -65,8 +68,10 @@
       font-size: .85rem;
     }
 
+    /* Chart container */
     #gravity_chart { width: 100%; height: 370px; margin-top: 10px; }
 
+    /* Range dropdown styling */
     #rangeSelect {
       background: #111720;
       color: var(--text);
@@ -77,6 +82,7 @@
       outline: none;
     }
 
+    /* Sensor summary tiles */
     .sensor-block {
       margin-bottom: 28px;
       padding-bottom: 16px;
@@ -118,6 +124,9 @@
 <body>
   <div class="dashboard">
 
+    <!-- ==========================
+         HEADER
+         ========================== -->
     <header>
       <div>
         <h1>797 Distillery • Fermentation Dashboard</h1>
@@ -126,9 +135,14 @@
       <div class="badge">REALTIME</div>
     </header>
 
+    <!-- ==========================
+         MAIN GRID: CHART + TILES
+         ========================== -->
     <div class="grid">
 
-      <!-- CHART -->
+      <!-- ==========
+           CHART CARD
+           ========== -->
       <div class="card">
         <div class="chart-header">
           <div>
@@ -147,10 +161,12 @@
         <div id="gravity_chart"></div>
       </div>
 
-      <!-- SENSOR PANEL -->
+      <!-- ==========
+           SENSOR PANEL CARD
+           ========== -->
       <div class="card">
 
-        <!-- BLACK TILT -->
+        <!-- BLACK TILT BLOCK -->
         <div class="sensor-block">
           <div class="sensor-header">
             <div class="sensor-name">Black Tilt</div>
@@ -178,10 +194,11 @@
           </div>
         </div>
 
-        <!-- GREEN TILT -->
+        <!-- GREEN TILT BLOCK -->
         <div class="sensor-block">
           <div class="sensor-header">
             <div class="sensor-name">Green Tilt</div>
+            <!-- Note: initial visual state; logic below will flip to Online/Offline -->
             <div id="greenStatus" class="pill online" style="border-color:var(--teal); color:var(--teal);">Offline</div>
           </div>
 
@@ -212,229 +229,314 @@
     <div class="footer-note">Auto-refresh every 20 seconds</div>
   </div>
 
-<script>
-google.charts.load("current", {packages:["corechart"]});
-google.charts.setOnLoadCallback(initDashboard);
+  <!-- ==========================
+       JAVASCRIPT SECTION
+       ========================== -->
+  <script>
+  // Load Google Charts and bootstrap the dashboard
+  google.charts.load("current", {packages:["corechart"]});
+  google.charts.setOnLoadCallback(initDashboard);
 
-const SHEET_ID = "1cV8POWA9l0hlAyZPB1RYLYaqa4T4pXIRzQ3e6C9qkE8";
-const OG = 1.086;
+  // === CONFIG: SHEET + ORIGINAL GRAVITY ===
+  const SHEET_ID = "1cV8POWA9l0hlAyZPB1RYLYaqa4T4pXIRzQ3e6C9qkE8";
+  const OG = 1.086;
 
-const DATASETS = [
-  { sheet: "Black Corn", key: "black" },
-  { sheet: "Green Corn", key: "green" }
-];
+  // Tabs we read from the spreadsheet
+  const DATASETS = [
+    { sheet: "Black Corn", key: "black" },
+    { sheet: "Green Corn", key: "green" }
+  ];
 
-function initDashboard() {
-  document.getElementById("rangeSelect").addEventListener("change", () => {
+  // ==========================
+  //  INIT & REFRESH LOOP
+  // ==========================
+  function initDashboard() {
+    // Handle range dropdown
+    document.getElementById("rangeSelect").addEventListener("change", () => {
+      updateRangeLabel();
+      updateDashboard();
+    });
+
     updateRangeLabel();
     updateDashboard();
-  });
-  updateRangeLabel();
-  updateDashboard();
-  setInterval(updateDashboard, 20000);
-}
 
-function getRangeDays() {
-  return parseInt(document.getElementById("rangeSelect").value || "1", 10);
-}
-
-function updateRangeLabel() {
-  const days = getRangeDays();
-  document.getElementById("rangeLabel").textContent =
-    days === 1 ? "Today" : `Last ${days} days`;
-}
-
-function updateDashboard() {
-  Promise.all(DATASETS.map(ds => loadSheet(ds.sheet)))
-    .then(res => {
-      let obj = {};
-      DATASETS.forEach((ds, i) => obj[ds.sheet] = res[i]);
-      updateTiles(obj);
-      drawChart(obj);
-    });
-}
-
-function loadSheet(sheet) {
-  const q = "select A,B,C where A is not null order by A";
-  const url =
-    `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json&sheet=${encodeURIComponent(sheet)}&tq=${encodeURIComponent(q)}`;
-
-  return fetch(url)
-    .then(r => r.text())
-    .then(t => JSON.parse(t.substr(47).slice(0, -2)).table);
-}
-
-// TIMESTAMP HELPERS
-function toDate(raw) {
-  if (!raw) return new Date();
-
-  if (typeof raw === "object") {
-    if ("v" in raw) raw = raw.v;
-    else if ("f" in raw) raw = raw.f;
+    // Auto-refresh every 20s
+    setInterval(updateDashboard, 20000);
   }
 
-  if (typeof raw === "string" && raw.includes("Date(")) {
-    const p = raw.replace("Date(", "").replace(")", "").split(",").map(Number);
-    return new Date(p[0], p[1], p[2], p[3], p[4], p[5]);
+  function getRangeDays() {
+    return parseInt(document.getElementById("rangeSelect").value || "1", 10);
   }
 
-  if (typeof raw === "number") {
-    const base = new Date(Date.UTC(1899, 11, 30));
-    return new Date(base.getTime() + raw * 86400000);
+  function updateRangeLabel() {
+    const days = getRangeDays();
+    document.getElementById("rangeLabel").textContent =
+      days === 1 ? "Today" : `Last ${days} days`;
   }
 
-  const d = new Date(raw);
-  return isNaN(d.getTime()) ? new Date() : d;
-}
-
-function parseTS(raw) {
-  const d = toDate(raw);
-  return d.toLocaleString("en-US", {
-    month: "short", day: "2-digit", year: "numeric",
-    hour: "2-digit", minute: "2-digit",
-    hour12: true, timeZone: "America/Chicago"
-  });
-}
-
-// ABV CALC
-function calcABV(sg) {
-  if (!sg || sg <= 0) return null;
-  return (OG - sg) * 131.25;
-}
-
-// TILES
-function updateTiles(data) {
-  updateTile(data["Black Corn"], "black");
-  updateTile(data["Green Corn"], "green");
-}
-
-function updateTile(table, key) {
-  const s = id => document.getElementById(id);
-
-  if (!table || !table.rows.length) {
-    setOffline(key);
-    return;
+  function updateDashboard() {
+    // Load both sheets (Black + Green) in parallel
+    Promise.all(DATASETS.map(ds => loadSheet(ds.sheet)))
+      .then(res => {
+        let obj = {};
+        DATASETS.forEach((ds, i) => obj[ds.sheet] = res[i]);
+        updateTiles(obj);
+        drawChart(obj);  // <- chart rendering
+      });
   }
 
-  let row = null;
-  for (let i = table.rows.length - 1; i >= 0; i--) {
-    const c = table.rows[i].c;
-    if (c && c[0] && c[1] && c[2]) { row = c; break; }
+  // ==========================
+  //  GOOGLE SHEETS LOADER
+  // ==========================
+  function loadSheet(sheet) {
+    const q = "select A,B,C where A is not null order by A";
+    const url =
+      `https://docs.google.com/spreadsheets/d/${SHEET_ID}/gviz/tq?tqx=out:json&sheet=${encodeURIComponent(sheet)}&tq=${encodeURIComponent(q)}`;
+
+    return fetch(url)
+      .then(r => r.text())
+      .then(t => JSON.parse(t.substr(47).slice(0, -2)).table);
   }
-  if (!row) return setOffline(key);
 
-  const ts = row[0].v;
-  const temp = Number(row[1].v);
-  const sg = Number(row[2].v);
+  // ==========================
+  //  TIMESTAMP HELPERS
+  // ==========================
+  function toDate(raw) {
+    if (!raw) return new Date();
 
-  s(`${key}Temp`).innerHTML = `${temp.toFixed(1)}<small>°F</small>`;
-  s(`${key}Gravity`).innerHTML = `${sg.toFixed(3)}<small>SG</small>`;
-  s(`${key}Updated`).textContent = "Last update: " + parseTS(ts);
-
-  const abv = calcABV(sg);
-  s(`${key}ABV`).innerHTML = abv ? `${abv.toFixed(2)}<small>%</small>` : `--<small>%</small>`;
-
-  s(`${key}Status`).textContent = "Online";
-  s(`${key}Status`).classList.add("online");
-  s(`${key}Status`).classList.remove("offline");
-}
-
-function setOffline(key) {
-  const s = id => document.getElementById(id);
-  s(`${key}Status`).textContent = "Offline";
-  s(`${key}Status`).classList.remove("online");
-  s(`${key}Status`).classList.add("offline");
-  s(`${key}Temp`).innerHTML = `--<small>°F</small>`;
-  s(`${key}Gravity`).innerHTML = `--<small>SG</small>`;
-  s(`${key}ABV`).innerHTML = `--<small>%</small>`;
-  s(`${key}Updated`).textContent = "Last update: --";
-}
-
-// CHART
-function extractSeries(table) {
-  const out = [];
-  if (!table || !table.rows) return out;
-
-  table.rows.forEach(r => {
-    const c = r.c;
-    if (c && c[0] && c[2]) {
-      const d = toDate(c[0].v);
-      const sg = Number(c[2].v);
-      if (!isNaN(sg)) out.push({ time: d, gravity: sg });
+    if (typeof raw === "object") {
+      if ("v" in raw) raw = raw.v;
+      else if ("f" in raw) raw = raw.f;
     }
-  });
 
-  return out;
-}
+    // Google "Date(YYYY,MM,DD,HH,mm,ss)" style
+    if (typeof raw === "string" && raw.includes("Date(")) {
+      const p = raw.replace("Date(", "").replace(")", "").split(",").map(Number);
+      return new Date(p[0], p[1], p[2], p[3], p[4], p[5]);
+    }
 
-function drawChart(d) {
-  const black = extractSeries(d["Black Corn"]);
-  const green = extractSeries(d["Green Corn"]);
+    // Serial number style (Excel/Sheets)
+    if (typeof raw === "number") {
+      const base = new Date(Date.UTC(1899, 11, 30));
+      return new Date(base.getTime() + raw * 86400000);
+    }
 
-  const days = getRangeDays();
-  const now = new Date();
-  const cutoff = now.getTime() - days * 86400000;
+    // Normal ISO/string date fallback
+    const d = new Date(raw);
+    return isNaN(d.getTime()) ? new Date() : d;
+  }
 
-  const map = new Map();
-
-  function add(series, key) {
-    series.forEach(p => {
-      if (p.time.getTime() < cutoff) return;
-      const k = p.time.toISOString();
-      if (!map.has(k)) map.set(k, { time: p.time, black: null, green: null });
-      map.get(k)[key] = p.gravity;
+  function parseTS(raw) {
+    const d = toDate(raw);
+    return d.toLocaleString("en-US", {
+      month: "short", day: "2-digit", year: "numeric",
+      hour: "2-digit", minute: "2-digit",
+      hour12: true, timeZone: "America/Chicago"
     });
   }
 
-  add(black, "black");
-  add(green, "green");
-
-  const merged = Array.from(map.values()).sort((a, b) => a.time - b.time);
-  if (merged.length > 200) merged.splice(0, merged.length - 200);
-
-  const data = new google.visualization.DataTable();
-  data.addColumn("datetime", "Time");
-  data.addColumn("number", "Black Corn");
-  data.addColumn("number", "Green Corn");
-
-  merged.forEach(p => data.addRow([p.time, p.black, p.green]));
-
-  const ticks = [];
-  if (merged.length) {
-    let t = new Date(merged[0].time);
-    t.setMinutes(0, 0, 0);
-    const end = merged[merged.length - 1].time;
-    while (t <= end) {
-      ticks.push(new Date(t));
-      t.setHours(t.getHours() + 1);
-    }
+  // ==========================
+  //  ABV CALC FROM OG & SG
+  // ==========================
+  function calcABV(sg) {
+    if (!sg || sg <= 0) return null;
+    return (OG - sg) * 131.25;
   }
 
-  const options = {
-    backgroundColor: "transparent",
-    legend: { position: "bottom", textStyle: { color: "#cfd8e3" } },
-    hAxis: {
-      textStyle: { color: "#9aa4b2" },
-      gridlines: { color: "#1e2530" },
-      ticks: ticks,
-      format: "h a"
-    },
-    vAxis: {
-      textStyle: { color: "#9aa4b2" },
-      gridlines: { color: "#1e2530" }
-    },
-    chartArea: { left: 60, top: 20, right: 30, bottom: 70 },
-    series: {
-      0: { color: "#d8843e", width: 3 },
-      1: { color: "#00c9a7", width: 3 }
-    }
-  };
+  // ==========================
+  //  TILE / STATUS UPDATES
+  // ==========================
+  function updateTiles(data) {
+    updateTile(data["Black Corn"], "black");
+    updateTile(data["Green Corn"], "green");
+  }
 
-  new google.visualization.LineChart(
-    document.getElementById("gravity_chart")
-  ).draw(data, options);
-}
-</script>
+  function updateTile(table, key) {
+    const s = id => document.getElementById(id);
+
+    if (!table || !table.rows.length) {
+      setOffline(key);
+      return;
+    }
+
+    // Find latest row that has all three values (A,B,C)
+    let row = null;
+    for (let i = table.rows.length - 1; i >= 0; i--) {
+      const c = table.rows[i].c;
+      if (c && c[0] && c[1] && c[2]) { row = c; break; }
+    }
+    if (!row) return setOffline(key);
+
+    const ts = row[0].v;
+    const temp = Number(row[1].v);
+    const sg = Number(row[2].v);
+
+    s(`${key}Temp`).innerHTML = `${temp.toFixed(1)}<small>°F</small>`;
+    s(`${key}Gravity`).innerHTML = `${sg.toFixed(3)}<small>SG</small>`;
+    s(`${key}Updated`).textContent = "Last update: " + parseTS(ts);
+
+    const abv = calcABV(sg);
+    s(`${key}ABV`).innerHTML = abv ? `${abv.toFixed(2)}<small>%</small>` : `--<small>%</small>`;
+
+    s(`${key}Status`).textContent = "Online";
+    s(`${key}Status`).classList.add("online");
+    s(`${key}Status`).classList.remove("offline");
+  }
+
+  function setOffline(key) {
+    const s = id => document.getElementById(id);
+    s(`${key}Status`).textContent = "Offline";
+    s(`${key}Status`).classList.remove("online");
+    s(`${key}Status`).classList.add("offline");
+    s(`${key}Temp`).innerHTML = `--<small>°F</small>`;
+    s(`${key}Gravity`).innerHTML = `--<small>SG</small>`;
+    s(`${key}ABV`).innerHTML = `--<small>%</small>`;
+    s(`${key}Updated`).textContent = "Last update: --";
+  }
+
+  // ==========================
+  //  CHART DATA PREP HELPERS
+  // ==========================
+  function extractSeries(table) {
+    const out = [];
+    if (!table || !table.rows) return out;
+
+    table.rows.forEach(r => {
+      const c = r.c;
+      if (c && c[0] && c[2]) {
+        const d = toDate(c[0].v);
+        const sg = Number(c[2].v);
+        if (!isNaN(sg)) out.push({ time: d, gravity: sg });
+      }
+    });
+
+    return out;
+  }
+
+  // ==========================
+  //  MAIN CHART DRAW FUNCTION
+  //  (Y-axis improved: min = 1.000, max = data max + 0.005)
+  // ==========================
+  function drawChart(d) {
+    const black = extractSeries(d["Black Corn"]);
+    const green = extractSeries(d["Green Corn"]);
+
+    const days = getRangeDays();
+    const now = new Date();
+    const cutoff = now.getTime() - days * 86400000; // milliseconds window
+
+    // Merge by timestamp so we can draw two lines on one chart
+    const map = new Map();
+
+    function add(series, key) {
+      series.forEach(p => {
+        if (p.time.getTime() < cutoff) return;
+        const k = p.time.toISOString();
+        if (!map.has(k)) map.set(k, { time: p.time, black: null, green: null });
+        map.get(k)[key] = p.gravity;
+      });
+    }
+
+    add(black, "black");
+    add(green, "green");
+
+    const merged = Array.from(map.values()).sort((a, b) => a.time - b.time);
+
+    // Thin data if needed
+    if (merged.length > 200) merged.splice(0, merged.length - 200);
+
+    // If no data, just bail out (nothing to draw)
+    if (!merged.length) {
+      const container = document.getElementById("gravity_chart");
+      container.innerHTML = "<div style='color:#9aa4b2; padding-top:40px;'>No data in selected range.</div>";
+      return;
+    }
+
+    // Build DataTable for Google Charts
+    const data = new google.visualization.DataTable();
+    data.addColumn("datetime", "Time");
+    data.addColumn("number", "Black Corn");
+    data.addColumn("number", "Green Corn");
+
+    merged.forEach(p => data.addRow([p.time, p.black, p.green]));
+
+    // ==============================
+    //  X-AXIS TICKS (HOURLY)
+    // ==============================
+    const ticks = [];
+    if (merged.length) {
+      let t = new Date(merged[0].time);
+      t.setMinutes(0, 0, 0);
+      const end = merged[merged.length - 1].time;
+      while (t <= end) {
+        ticks.push(new Date(t));       // hourly tick
+        t.setHours(t.getHours() + 1);
+      }
+    }
+
+    // ==============================
+    //  Y-AXIS RANGE (OPTION B + PADDING)
+    //  - Bottom locked at 1.000
+    //  - Top = max SG in data + 0.005
+    // ==============================
+    const allVals = [];
+    merged.forEach(p => {
+      if (typeof p.black === "number") allVals.push(p.black);
+      if (typeof p.green === "number") allVals.push(p.green);
+    });
+
+    let maxVal = 1.02; // fallback if weird data
+    if (allVals.length) {
+      maxVal = Math.max(...allVals);
+    }
+
+    // Add padding above the highest gravity so lines don’t hit the top
+    let yMin = 1.000;
+    let yMax = maxVal + 0.005;
+
+    // Ensure we always have at least a little vertical span
+    if (yMax < yMin + 0.01) {
+      yMax = yMin + 0.01;
+    }
+
+    // ==============================
+    //  CHART OPTIONS (COLORS / GRID / AXES)
+    // ==============================
+    const options = {
+      backgroundColor: "transparent",
+      legend: { position: "bottom", textStyle: { color: "#cfd8e3" } },
+
+      // Smooth curves a bit without going crazy
+      curveType: "function",
+
+      hAxis: {
+        textStyle: { color: "#9aa4b2" },
+        gridlines: { color: "#1e2530" },
+        ticks: ticks,           // hourly
+        format: "h a"
+      },
+      vAxis: {
+        textStyle: { color: "#9aa4b2" },
+        gridlines: { color: "#1e2530" },
+        viewWindowMode: "explicit",
+        viewWindow: {
+          min: yMin,
+          max: yMax
+        }
+      },
+      chartArea: { left: 60, top: 20, right: 30, bottom: 70 },
+      series: {
+        0: { color: "#d8843e", width: 3 }, // Black Corn line (copper)
+        1: { color: "#00c9a7", width: 3 }  // Green Corn line (teal)
+      }
+    };
+
+    // Draw the chart
+    new google.visualization.LineChart(
+      document.getElementById("gravity_chart")
+    ).draw(data, options);
+  }
+  </script>
 
 </body>
 </html>
